# cbcm-Chinese-Birth-Chart-2-Math

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: 01-philosophy.md  02-notation.md  03-ganzhi.md  04-wuxing.md  05-yijing.md  06-bazi.md  07-operators.md  08-prediction.md  09-applications.md  10-validation-plan.md  README.md
paper/: main.tex  main_zh.tex
